--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
+    <string name="call_list_no_item">No profile for faking call</string>
+    <string name="call_chooser_title_text">Add fake call profile</string>
+    <string name="call_chooser_contact_text">From contact</string>
+    <string name="call_chooser_call_log_text">From call log</string>
+    <string name="call_chooser_manual_text">Manual</string>
 </resources>
