--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="add_call_profile_title_text">Add fake call</string>
     <string name="call_name_text">Name</string>
     <string name="call_number_text">Phone number</string>
+    <string name="set_text">Set</string>
+    <string name="cancel_text">Cancel</string>
+    <string name="time_out_title_text">Time out</string>
 </resources>
